--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,8 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bubble_animated_tabbar:
-    path: '../bubble_animated_tabbar'
+    bubble_animated_tabbar: 1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
